--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,11 @@ jobs:
           # Busca cualquier archivo .zip en la raíz
           if ls *.zip 1> /dev/null 2>&1; then
             echo "📦 ZIP detectado. Descomprimiendo..."
-            unzip -o *.zip -d .
+            
+            # -o: Sobrescribir archivos existentes
+            # -x ".github/*": IMPORTANTE - Excluir la carpeta de workflows para evitar error de permisos
+            # -d .: Extraer en el directorio actual
+            unzip -o *.zip -x ".github/*" -d .
             
             # Si el zip creó una subcarpeta (ej: Mercado-main/), sacar archivos a la raíz
             if [ -d "Mercado-main" ]; then
@@ -36,8 +40,8 @@ jobs:
             git config --global user.name 'GitHub Action'
             git config --global user.email 'action@github.com'
             git add .
-            git commit -m "Deploy: Unzipped source files"
-            git push
+            # Hacemos commit solo si hay cambios en el código fuente (src, scripts, etc.)
+            git diff --quiet && git diff --staged --quiet || (git commit -m "Deploy: Unzipped source files" && git push)
           else
             echo "✅ No se encontró archivo .zip. Nada que hacer."
           fi
