--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "macroloop-analytics",
   "version": "1.0.0",
@@ -18,6 +19,7 @@
   "devDependencies": {
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@vitejs/plugin-react": "^4.2.1",
     "vite": "^5.0.0",
     "typescript": "^5.2.2"
   }
