--- a/.github/workflows/web-deploy.yml
+++ b/.github/workflows/web-deploy.yml
@@ -33,10 +33,11 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "20"
-          cache: 'npm'
+          # Cache eliminado para evitar errores si no existe package-lock.json
 
       - name: Install Dependencies
-        run: npm ci
+        # Usamos 'npm install' en lugar de 'npm ci' para que genere el lockfile si falta
+        run: npm install
 
       - name: Build
         run: npm run build
