--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "macroloop-analytics",
   "version": "1.0.0",
@@ -15,7 +14,7 @@
     "react-dom": "^18.2.0",
     "recharts": "^2.10.3",
     "yahoo-finance2": "^3.11.0",
-    "@google/genai": "^0.1.0"
+    "@google/genai": "*"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
