--- a/.github/workflows/web-deploy.yml
+++ b/.github/workflows/web-deploy.yml
@@ -2,10 +2,9 @@
 name: 3. Build & Deploy Web
 
 on:
-  push:
-    branches: ["main"]
   workflow_dispatch:
-  # Ejecutar automáticamente después de que se actualicen los datos financieros
+  # Se ejecuta AUTOMÁTICAMENTE cuando termina "2. Update Financial Data"
+  # Esto crea la cadena: Push Codigo -> Update Data -> Deploy Web
   workflow_run:
     workflows: ["2. Update Financial Data"]
     types:
@@ -25,6 +24,8 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
+    # Solo ejecutar si el workflow anterior fue exitoso
+    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -33,10 +34,8 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "20"
-          # Cache eliminado para evitar errores si no existe package-lock.json
 
       - name: Install Dependencies
-        # Usamos 'npm install' en lugar de 'npm ci' para que genere el lockfile si falta
         run: npm install
 
       - name: Build
